# Lejeu

./: .buildinfo  .pdm-python  README.md  coverage.json  genindex.html  index.html  le_jeu.dodge_the_roar.html  le_jeu.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
_modules/: index.html
_modules/le_jeu/: dodge_the_roar.html
docs/: conf.py  index.rst  modules.rst
docs/_build/doctrees/: environment.pickle  index.doctree  le_jeu.doctree  le_jeu.dodge_the_roar.doctree  modules.doctree
docs/_build/html/: .buildinfo  index.html  le_jeu.html  modules.html  objects.inv  search.html
docs/_build/html/_modules/: index.html
docs/_build/html/_sources/: index.rst.txt  le_jeu.dodge_the_roar.rst.txt  le_jeu.rst.txt
src/le_jeu/: __init__.py  dodge_the_roar.py  dummy.py
tests/: test_dodge_the roar.py  test_dodge_the_roar.py
